# nico

./: LICENSE  README.md
4wcomm/: README.md
4wcomm/demo/: 4wcomm.cpp  4wcomm.h  demo.ino
4wcomm/verify_connections/: README.md  verify_connections.ino
glum/: CMakeLists.txt  README  find_brick.cpp  find_brick.h  rs-glum.cpp
glum/arduino/glum/: glum.ino
gyro-control/gyro-hand/: .gitignore  Makefile  README.md  connect.sh  console.c  grip_positions.c  grip_positions.h  gyro_control.c  gyro_control.h  main.c  main.h  nico_motors.c  nico_motors.h  plane.glb  steering.c  steering.h  web_frontend.c  web_frontend.h
gyro-control/gyro-hand/arduino/last_gyro/: 4wcomm.cpp  4wcomm.h  last_gyro.ino
gyro-control/gyro-hand/arduino/main_gyro_bt_buzzer/: 4wcomm.cpp  4wcomm.h  main_gyro_bt_buzzer.ino
gyro-control/gyro-visualization-test/: .gitignore  Makefile  README.md  gyro.html  gyro_control.c  gyro_control.h  plane_server.c
juggle/: Makefile  README.md  console.c  console.h  main.c  nico_motors.c  nico_motors.h
kinematics/: nico-forward-kinematics.py  nico-inverse-kinematics.py  readme.txt
kinematics/forward-kinematics-client/: nico-forward-kinematics.py
kinematics/inverse-kinematics-client/: nico-inverse-kinematics.py
kinematics/kinematics-server/: Makefile  console.c  kinematics_server.c  kinematics_server.h  main.c  main.h  nico_motors.c  nico_motors.h  readme.txt
kinematics/palm_sensor/: Makefile  palm_sensor.c
stereo/: Makefile  navod.txt  pngwriter.c  pngwriter.h  zapis_obrazky.c
test_one_dof/: Makefile  test_one_dof.c
(+67 files in other folders)
